# turing_machine

./: .gitignore  CMakeLists.txt  Readme.md  asiuh  example.tur
src/: CMakeLists.txt  application.cpp  application.hpp  controller.cpp  controller.hpp  machine.cpp  machine.hpp  main.cpp  menu.cpp  menu.hpp  popup.cpp  popup.hpp  state_map.cpp  state_map.hpp  statesTable.cpp  statesTable.hpp  states_table.cpp  states_table.hpp  tape.cpp  tape.hpp
visual/: visual.sln  visual.vcxproj  visual.vcxproj.filters
